# omd-transfer

./: .gitignore  .travis.yml  Cargo.toml  config.template.toml  config.toml  readme.md  shell.nix  todo
src/: config.rs  error.rs  lib.rs  main.rs  transfer.rs  wifi.rs
