[package]
name = "omd_transfer"
version = "0.1.0"
authors = ["Moritz Ulrich <moritz@tarn-vedra.de>"]

[features]
default = [ "dbus" ]

[dependencies]
chrono = "0.2.22"
env_logger = "0.3.3"
lazy_static = "0.2.1"
log = "0.3.6"
regex = "0.1"
toml = "0.1.28"
getopts = "0.2"
get_if_addrs = "0.4"

[dependencies.hyper]
version = "0.9"
default-features = false
features = []

[dependencies.dbus]
version = "*"
optional = true
